Fix word-wrap from team.

--- a/app/assets/stylesheets/illustrator.scss
+++ b/app/assets/stylesheets/illustrator.scss
@@ -199,6 +199,7 @@ footer {
       margin-bottom: 0px;
       padding-top: 0px;
       padding-bottom: 0px;
+      word-wrap: break-word;
 
       .typename {
         font-family : Futura;
